WIP: added the webhook level file validation + seperated the comment interaction methods from post service