@@ -2,7 +2,7 @@ package com.example.SocialMediaApp.Upload.application;
 
 import com.example.SocialMediaApp.Content.domain.Media;
 import com.example.SocialMediaApp.Upload.api.dto.UploadRequest;
-import com.example.SocialMediaApp.Upload.domain.uploadType;
+import com.example.SocialMediaApp.Upload.domain.UploadType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -19,11 +19,10 @@ import java.util.stream.Collectors;
 
     public Map<String,String> generateUploadResponse(String userId, UploadRequest request){
         String uploadRequestId = UUID.randomUUID().toString();
-        String filetype=request.getFileType();
-        int first=filetype.indexOf("/");
-        String type=request.getFileType().substring(0,first);
+
         Map<String,String> uploadMap=new HashMap<>();
-        uploadMap.put("filepath",String.format("temporary/%s/%s/%s/%s",request.getUploadType().toString().toLowerCase(),userId,type,uploadRequestId));
+        String mediaCategory = request.getFileMimeType().startsWith("video/") ? "video" : "image";
+        uploadMap.put("filepath",String.format("temporary/%s/%s/%s/%s",request.getUploadType().toString().toLowerCase(),userId,mediaCategory,uploadRequestId));
         uploadMap.put("uploadRequestId",uploadRequestId);
         return uploadMap;
     }
@@ -33,16 +32,16 @@ import java.util.stream.Collectors;
             String type=filepath.split("/")[3];
             Media.MediaType mediaType= type.equalsIgnoreCase("video")?
                     Media.MediaType.VIDEO: Media.MediaType.IMAGE;
-            return new Media(filepath,mediaType);
-        }).collect(Collectors.toList());
+            return new Media(filepath.replace("temporary/",""),mediaType);
+        }).toList();
     }
 
     public UploadRequest toUploadRequest(MultipartFile file){
         UploadRequest request = new UploadRequest();
         request.setFileName(file.getName());
-        request.setFileType(file.getContentType());
+        request.setFileMimeType(file.getContentType());
         request.setFileSize(file.getSize());
-        request.setUploadType(uploadType.PROFILE);
+        request.setUploadType(UploadType.PROFILE);
         return request;
     }
 }
